--- a/templates/profile.html
+++ b/templates/profile.html
@@ -23,6 +23,90 @@
         </clipPath>
         </defs>
     </svg>
+    <center>
+    <div class="menu-links">
+      <div class="menu-link">
+        <p class="menu-link-name hoverable">Home</p>
+        <svg width="39" height="39" class="menu-link-vector hoverable" viewBox="0 0 59 59" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <g clip-path="url(#clip0_197_138)">
+          <path d="M10.002 5.58125C10.002 4.30821 10.5077 3.08731 11.4078 2.18714C12.308 1.28696 13.5289 0.78125 14.802 0.78125H53.202C54.475 0.78125 55.6959 1.28696 56.5961 2.18714C57.4962 3.08731 58.002 4.30821 58.002 5.58125V43.9813C58.002 45.2543 57.4962 46.4752 56.5961 47.3754C55.6959 48.2755 54.475 48.7812 53.202 48.7812C51.9289 48.7812 50.708 48.2755 49.8078 47.3754C48.9077 46.4752 48.402 45.2543 48.402 43.9813V17.1684L8.59555 56.9749C7.69026 57.8492 6.47777 58.333 5.21923 58.3221C3.96068 58.3112 2.75679 57.8063 1.86683 56.9164C0.976867 56.0264 0.472055 54.8225 0.461119 53.564C0.450183 52.3054 0.933998 51.0929 1.80836 50.1876L41.6148 10.3813H14.802C13.5289 10.3813 12.308 9.87554 11.4078 8.97536C10.5077 8.07519 10.002 6.85429 10.002 5.58125Z" fill="white"/>
+          </g>
+          <defs>
+          <clipPath id="clip0_197_138">
+          <rect width="59" height="59" fill="white"/>
+          </clipPath>
+          </defs>
+        </svg>  
+      </div>
+      <div class="menu-link">
+        <p class="menu-link-name hoverable">Discover</p>
+        <svg width="39" height="39" class="menu-link-vector hoverable" viewBox="0 0 59 59" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <g clip-path="url(#clip0_197_138)">
+          <path d="M10.002 5.58125C10.002 4.30821 10.5077 3.08731 11.4078 2.18714C12.308 1.28696 13.5289 0.78125 14.802 0.78125H53.202C54.475 0.78125 55.6959 1.28696 56.5961 2.18714C57.4962 3.08731 58.002 4.30821 58.002 5.58125V43.9813C58.002 45.2543 57.4962 46.4752 56.5961 47.3754C55.6959 48.2755 54.475 48.7812 53.202 48.7812C51.9289 48.7812 50.708 48.2755 49.8078 47.3754C48.9077 46.4752 48.402 45.2543 48.402 43.9813V17.1684L8.59555 56.9749C7.69026 57.8492 6.47777 58.333 5.21923 58.3221C3.96068 58.3112 2.75679 57.8063 1.86683 56.9164C0.976867 56.0264 0.472055 54.8225 0.461119 53.564C0.450183 52.3054 0.933998 51.0929 1.80836 50.1876L41.6148 10.3813H14.802C13.5289 10.3813 12.308 9.87554 11.4078 8.97536C10.5077 8.07519 10.002 6.85429 10.002 5.58125Z" fill="white"/>
+          </g>
+          <defs>
+          <clipPath id="clip0_197_138">
+          <rect width="59" height="59" fill="white"/>
+          </clipPath>
+          </defs>
+        </svg>  
+      </div>
+      <div class="menu-link">
+        <p class="menu-link-name hoverable">Courses</p>
+        <svg width="39" height="39" class="menu-link-vector hoverable" viewBox="0 0 59 59" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <g clip-path="url(#clip0_197_138)">
+          <path d="M10.002 5.58125C10.002 4.30821 10.5077 3.08731 11.4078 2.18714C12.308 1.28696 13.5289 0.78125 14.802 0.78125H53.202C54.475 0.78125 55.6959 1.28696 56.5961 2.18714C57.4962 3.08731 58.002 4.30821 58.002 5.58125V43.9813C58.002 45.2543 57.4962 46.4752 56.5961 47.3754C55.6959 48.2755 54.475 48.7812 53.202 48.7812C51.9289 48.7812 50.708 48.2755 49.8078 47.3754C48.9077 46.4752 48.402 45.2543 48.402 43.9813V17.1684L8.59555 56.9749C7.69026 57.8492 6.47777 58.333 5.21923 58.3221C3.96068 58.3112 2.75679 57.8063 1.86683 56.9164C0.976867 56.0264 0.472055 54.8225 0.461119 53.564C0.450183 52.3054 0.933998 51.0929 1.80836 50.1876L41.6148 10.3813H14.802C13.5289 10.3813 12.308 9.87554 11.4078 8.97536C10.5077 8.07519 10.002 6.85429 10.002 5.58125Z" fill="white"/>
+          </g>
+          <defs>
+          <clipPath id="clip0_197_138">
+          <rect width="59" height="59" fill="white"/>
+          </clipPath>
+          </defs>
+        </svg>  
+      </div>
+      <div class="menu-link">
+        <p class="menu-link-name hoverable">Blog</p>
+        <svg width="39" height="39" class="menu-link-vector hoverable" viewBox="0 0 59 59" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <g clip-path="url(#clip0_197_138)">
+          <path d="M10.002 5.58125C10.002 4.30821 10.5077 3.08731 11.4078 2.18714C12.308 1.28696 13.5289 0.78125 14.802 0.78125H53.202C54.475 0.78125 55.6959 1.28696 56.5961 2.18714C57.4962 3.08731 58.002 4.30821 58.002 5.58125V43.9813C58.002 45.2543 57.4962 46.4752 56.5961 47.3754C55.6959 48.2755 54.475 48.7812 53.202 48.7812C51.9289 48.7812 50.708 48.2755 49.8078 47.3754C48.9077 46.4752 48.402 45.2543 48.402 43.9813V17.1684L8.59555 56.9749C7.69026 57.8492 6.47777 58.333 5.21923 58.3221C3.96068 58.3112 2.75679 57.8063 1.86683 56.9164C0.976867 56.0264 0.472055 54.8225 0.461119 53.564C0.450183 52.3054 0.933998 51.0929 1.80836 50.1876L41.6148 10.3813H14.802C13.5289 10.3813 12.308 9.87554 11.4078 8.97536C10.5077 8.07519 10.002 6.85429 10.002 5.58125Z" fill="white"/>
+          </g>
+          <defs>
+          <clipPath id="clip0_197_138">
+          <rect width="59" height="59" fill="white"/>
+          </clipPath>
+          </defs>
+        </svg>  
+      </div>
+      <div class="menu-link">
+        <p class="menu-link-name hoverable">Subscribe</p>
+        <svg width="39" height="39" class="menu-link-vector hoverable" viewBox="0 0 59 59" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <g clip-path="url(#clip0_197_138)">
+          <path d="M10.002 5.58125C10.002 4.30821 10.5077 3.08731 11.4078 2.18714C12.308 1.28696 13.5289 0.78125 14.802 0.78125H53.202C54.475 0.78125 55.6959 1.28696 56.5961 2.18714C57.4962 3.08731 58.002 4.30821 58.002 5.58125V43.9813C58.002 45.2543 57.4962 46.4752 56.5961 47.3754C55.6959 48.2755 54.475 48.7812 53.202 48.7812C51.9289 48.7812 50.708 48.2755 49.8078 47.3754C48.9077 46.4752 48.402 45.2543 48.402 43.9813V17.1684L8.59555 56.9749C7.69026 57.8492 6.47777 58.333 5.21923 58.3221C3.96068 58.3112 2.75679 57.8063 1.86683 56.9164C0.976867 56.0264 0.472055 54.8225 0.461119 53.564C0.450183 52.3054 0.933998 51.0929 1.80836 50.1876L41.6148 10.3813H14.802C13.5289 10.3813 12.308 9.87554 11.4078 8.97536C10.5077 8.07519 10.002 6.85429 10.002 5.58125Z" fill="white"/>
+          </g>
+          <defs>
+          <clipPath id="clip0_197_138">
+          <rect width="59" height="59" fill="white"/>
+          </clipPath>
+          </defs>
+        </svg>  
+      </div>
+      {% if 'loggedin' in session %}
+      <svg width="30" height="30" class="menu-logout hoverable" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <g clip-path="url(#clip0_237_10)">
+        <path d="M10 44C9.46957 44 8.96086 43.7893 8.58579 43.4142C8.21071 43.0391 8 42.5304 8 42V6C8 5.46957 8.21071 4.96086 8.58579 4.58579C8.96086 4.21071 9.46957 4 10 4H38C38.5304 4 39.0391 4.21071 39.4142 4.58579C39.7893 4.96086 40 5.46957 40 6V42C40 42.5304 39.7893 43.0391 39.4142 43.4142C39.0391 43.7893 38.5304 44 38 44H10ZM30 32L40 24L30 16V22H18V26H30V32Z" fill="white"/>
+        </g>
+        <defs>
+        <clipPath id="clip0_237_10">
+        <rect width="48" height="48" fill="white"/>
+        </clipPath>
+        </defs>
+      </svg>
+      {% else %}
+      <button class="auth-btn-2 to-login">Log In</button>
+      {% endif %}
+        
+    </div>
+    </center>
     </div>
 </div>
     <div id="overlay" style="background-color: black;">
