--- a/templates/user.html
+++ b/templates/user.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aurorae - Profile</title>
+    <title>{{user['Name']}} (@{{user['Username']}}) / Aurorae</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"">
     <link rel="stylesheet" href="{{url_for('static', filename='style.css')}}">
     <link rel="shortcut icon" href="{{url_for('static', filename='favicon.svg')}}" type="image/x-icon">
@@ -185,7 +185,11 @@
                         </defs>
                     </svg>    
                 </div>
+                {% if 'loggedin' in session %}
                 <img src="{{usrdata['pfp']}}" class="nav-user-logo " alt="user profile img">
+                {% else %}
+                <img src="/uploads/default.svg" class="nav-user-logo " alt="user profile img">
+                {% endif %}
                 <svg width="35" class="menu-icon inverted hoverable" height="23" viewBox="0 0 43 29" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M28.6667 26.5833C28.6667 27.918 27.5847 29 26.25 29H2.41666C1.08198 29 0 27.918 0 26.5833C0 25.2486 1.08198 24.1667 2.41667 24.1667H26.25C27.5847 24.1667 28.6667 25.2486 28.6667 26.5833ZM43 14.5C43 15.8347 41.918 16.9167 40.5833 16.9167H2.41667C1.08198 16.9167 0 15.8347 0 14.5C0 13.1653 1.08198 12.0833 2.41667 12.0833H40.5833C41.918 12.0833 43 13.1653 43 14.5ZM28.6667 2.41667C28.6667 3.75135 27.5847 4.83333 26.25 4.83333H2.41666C1.08198 4.83333 0 3.75135 0 2.41667C0 1.08198 1.08198 0 2.41667 0H26.25C27.5847 0 28.6667 1.08198 28.6667 2.41667Z" fill="#010101"/>
                 </svg>
@@ -199,25 +203,25 @@
     <div class="user-main">
       <div class="user-main-profile">
         <center>
-          <img src="{{usrdata['pfp']}}" class="user-pfp" alt="">
-          <div class="user-change-img hoverable">
-            <form action="" enctype="multipart/form-data" method="post">
-              <label for="pfp">
-                <svg width="20" height="20" class="hoverable" style="padding-top: .37em;" viewBox="0 0 49 49" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M46.9634 38.3657C46.9634 39.4266 46.542 40.444 45.7918 41.1941C45.0417 41.9443 44.0242 42.3657 42.9634 42.3657H6.96338C5.90251 42.3657 4.8851 41.9443 4.13495 41.1941C3.38481 40.444 2.96338 39.4266 2.96338 38.3657V16.3657C2.96338 15.3049 3.38481 14.2874 4.13495 13.5373C4.8851 12.7871 5.90251 12.3657 6.96338 12.3657H14.9634L18.9634 6.36572H30.9634L34.9634 12.3657H42.9634C44.0242 12.3657 45.0417 12.7871 45.7918 13.5373C46.542 14.2874 46.9634 15.3049 46.9634 16.3657V38.3657Z" stroke="black" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/>
-                  <path d="M24.9634 34.3657C29.3817 34.3657 32.9634 30.784 32.9634 26.3657C32.9634 21.9474 29.3817 18.3657 24.9634 18.3657C20.5451 18.3657 16.9634 21.9474 16.9634 26.3657C16.9634 30.784 20.5451 34.3657 24.9634 34.3657Z" stroke="black" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>
-              </label>
-          </div>
+          <img src="{{user['pfp']}}" class="user-pfp" alt="">
         </center>
         <div class="user-profile">
           <div class="user-profile-binfo">
-            <h1 class="user-name">{{usrdata['Name']}}</h1>
-            <p class="username">@{{usrdata['Username']}}</p>
+            <h1 class="user-name">{{user['Name']}}</h1>
+            <p class="username">@{{user['Username']}}</p>
           </div>
-          <!-- <button class="follow-btn hoverable">
-            Follow <svg width="17" height="17" class="nav-create-vector" viewBox="0 0 23 22" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M22.0647 8.752V13.648H13.9527V21.76H9.05669V13.648H0.944688V8.752H9.05669V0.639997H13.9527V8.752H22.0647Z" fill="white"/></svg>    
-          </button> -->
+          {% if 'loggedin' in session %}
+          <form action="" method="post" style="float: right;">
+            <input type="text" value="follow" style="display: none;" name="follow" id="">
+            <button type="submit" class="follow-btn hoverable">
+              Follow <svg width="17" height="17" class="nav-create-vector" viewBox="0 0 23 22" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M22.0647 8.752V13.648H13.9527V21.76H9.05669V13.648H0.944688V8.752H9.05669V0.639997H13.9527V8.752H22.0647Z" fill="white"/></svg>    
+            </button>
+          </form>
+          {% else %}
+          <a href="/auth"><button class="follow-btn hoverable">
+            Log in    
+          </button></a>
+          {% endif %}
           <br>
           <div class="user-profile-stats">
             <center>
@@ -253,12 +257,6 @@
       </div>
     </div>
   </div>
-  <input type="file" style="display: none;" onchange="imgPreview()" id="pfp" name="pfp" accept=".png, .jpg, .gif , .jpeg">
-  <div class="pfpsubmit-div">
-    <p class="pfpsubmit-warning">Careful. You have unsaved changes!</p>
-    <input type="submit" class="pfpsubmit hoverable">
-  </div>
-</form>
 </body>
 </html>
 <div class="cursor">
@@ -274,6 +272,9 @@
       </svg>
     </div>
   </div>
+  {% if 'loggedin' in session %}
+  <p id="isfollowing">{{following}}</p>
+  {% endif %}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/gsap.min.js" integrity="sha512-Mf/xUqfWvDIr+1B6zfnIDIiG7XHzyP/guXUWgV6PgaQoIFeXkJQR5XWh9fqAiCiRCpemabt3naV4jhDWVnuYDQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
