--- a/templates/index.html
+++ b/templates/index.html
@@ -230,13 +230,14 @@
         </div>
         <center>
         <div class="prints-type">
-          <div class="prints-physical">
+          <div class="prints-physical prints">
             <h1 class="prints-title">Physical Prints</h1>
             <p class="prints-desc">Get any artwork as a physical print on a variety of different items ranging from coffee mugs to metel printed posters. Some artworks can we even be bought on canvases.</p>
           </div>
-          <div class="prints-virtual"></div>
+          <div class="prints-virtual prints">
             <h1 class="prints-title">Physical Prints</h1>
             <p class="prints-desc"></p>
+          </div>
         </div>
         </center>
     </div>
