--- a/templates/index.html
+++ b/templates/index.html
@@ -228,6 +228,7 @@
                 </p>
             </div>
         </div>
+        <br><br>
         <center>
         <div class="prints-type">
           <div class="prints-physical prints">
@@ -235,12 +236,59 @@
             <p class="prints-desc">Get any artwork as a physical print on a variety of different items ranging from coffee mugs to metel printed posters. Some artworks can we even be bought on canvases.</p>
           </div>
           <div class="prints-virtual prints">
-            <h1 class="prints-title">Physical Prints</h1>
-            <p class="prints-desc"></p>
+            <h1 class="prints-title">Virtual Prints</h1>
+            <p class="prints-desc">Get some specified artworks as a digital asset that can be stored as a NFT (Non-Fungible-Tokens). These NFTs are Unique and you will be sole owner of them.</p>
           </div>
         </div>
         </center>
+        <br><br><br>
+        <div class="offering">
+          <center>
+          <h1 class="offering-head">What do we offer?</h1>
+          <div class="offerings">
+            <div class="offering o1">
+              <img src="{{url_for('static', filename='o1.svg')}}" class="offering-img" alt="">
+            </div>
+            <div class="offering o2">
+              <img src="{{url_for('static', filename='o2.svg')}}" class="offering-img" alt="">
+            </div>
+            <div class="offering o3">
+              <img src="{{url_for('static', filename='o3.svg')}}" class="offering-img" alt="">
+            </div>
+            <div class="offering o4">
+              <img src="{{url_for('static', filename='o4.svg')}}" class="offering-img" alt="">
+            </div>
+          </div>
+          </center>
+        </div>
+        <div class="artwork-subs">
+          <div class="artwork">
+            <img src="{{url_for('static', filename='req-artwork.svg')}}" class="as-img aw" alt="">
+            <div class="as-aw">
+              <h2 class="as-aw-head">Request Artwork</h2>
+              <button class="as-btn hoverable">Here</button>
+              <p class="as-aw-desc">You can request a custom artwork as per your liking that can be bought as a physical as well as a digital asset. The Request artwork feature will be volatile to the artist’s avaliability.</p>
+            </div>
+            <br><br><br>
+            <br><br><br>
+          </div>
+          <div class="artwork">
+            <div class="as-aw" style="width: 50%; margin-right: 0; margin-left: 4em;">
+              <div style="float: right; margin-right: 6em;">
+              <button class="as-btn hoverable">Here</button>
+              <h2 class="as-aw-head" style="margin-left: 1em;">Subscription</h2>
+              </div>
+              <p class="as-aw-desc" style="width: 85%">You can enroll for a monthly subscription that will grant you discounts on both physical and digital assets as well as access to some exclusive courses and blog posts. You will also get access to some member only artworks and you can be the first one to get them by getting a member ship.</p>
+            </div>
+            <img style="margin-right: 0em; margin-left: 0;" src="{{url_for('static', filename='req-artwork.svg')}}" class="as-img aw" alt="">
+            
+          </div>
+        </div>
     </div>
+    <br>
+    <center>
+      <img src="{{url_for('static', filename='logo.svg')}}" class="footer-lgoo" alt="">
+    </center>
 </body>
 </html>
 <div class="cursor">
