--- a/static/style.css
+++ b/static/style.css
@@ -1350,6 +1350,108 @@ canvas{
 .prints-title{
     background: #1B1B1B;
     color: white;
+    width: 10em;
+    padding-top: .25em;
+    padding-bottom: .25em;
     font-family: 'gilroy-700';
+    border-radius: .7em;
+    box-shadow: -129px 129px 73px rgba(0, 0, 0, 0.01), -73px 73px 62px rgba(0, 0, 0, 0.05), -32px 32px 46px rgba(0, 0, 0, 0.09), -8px 8px 25px rgba(0, 0, 0, 0.1), 0px 0px 0px rgba(0, 0, 0, 0.1);
     font-size: 1.6em;
+    margin-bottom: 1.5em;
+}
+
+.prints-desc{
+    width: 60%;
+    line-height: 1.3em;
+    font-weight: 500;
+    font-family: 'gilroy-500';
+}
+
+.offerings{
+    margin-top: 1em;
+}
+
+.offering-head{
+    font-family: 'gilroy-700';
+}
+
+.offering{
+    margin-top: 2em;
+    height: 8em;
+}
+
+.offering-img{
+    margin-bottom: 2em;
+    pointer-events: none;
+    user-select: none;
+    max-width: 55em;
+}
+
+.artwork-subs{
+    margin-top: 40em;
+}
+
+.as-img{
+    margin-left: 4em;
+    border-radius: 1em;
+    filter: drop-shadow(0px 399px 160px rgba(0, 0, 0, 0.01)) drop-shadow(0px 224px 135px rgba(0, 0, 0, 0.05)) drop-shadow(0px 100px 100px rgba(0, 0, 0, 0.09)) drop-shadow(0px 25px 55px rgba(0, 0, 0, 0.1)) drop-shadow(0px 0px 0px rgba(0, 0, 0, 0.1));
+    vertical-align: bottom;
+    display: inline-block;
+    max-width: 40em;
+}
+
+.as-aw{
+    display: inline-block;
+    width: 50%;
+    margin-left: 2em;
+    vertical-align: top;
+}
+
+.as-aw-head{
+    color: black;
+    font-family: 'gilroy-800';
+    font-size: 2em;
+    width: 4em;display: inline-block;
+    vertical-align: middle;
+}
+
+.as-btn{
+    font-family: 'gilroy-700';
+    background-color: #1b1b1b;
+    display: inline-block;
+    vertical-align: middle;
+    margin-left: 2em;
+    color: white;
+    width: 7em;
+    height: 2.5em;
+    font-size: 1.2em;
+    border-radius: .75em;
+    box-shadow: -129px 129px 73px rgba(0, 0, 0, 0.01), -73px 73px 62px rgba(0, 0, 0, 0.05), -32px 32px 46px rgba(0, 0, 0, 0.09), -8px 8px 25px rgba(0, 0, 0, 0.1), 0px 0px 0px rgba(0, 0, 0, 0.1);
+}
+
+.as-aw-desc{
+    width: 70%;
+    display: inline-block;
+    font-size: 1.2em;
+    margin-top: 5em;
+    vertical-align: bottom;
+    font-family: 'gilroy-500';
+    line-height: 1.3em;
+}
+
+.footer-lgoo{
+    max-width: 5em;
+    animation: foot 2s infinite;
+}
+
+@keyframes foot {
+    0%{
+        transform: translateY(0px);
+    }
+    50%{
+        transform: translateY(10px);
+    }
+    100%{
+        transform: translateY(0px);
+    }
 }
